--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,5 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.4'
 
     implementation 'com.mindorks.android:prdownloader:0.5.0'
-
+    implementation 'com.chaos.view:pinview:1.4.2'
 }
